<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="about_text">Thiki Wiki\n\n
		**Thiki Wiki for Android** is a notebook with linkable
		pages for tracking your ideas, tasks, projects, notes,
		brainstorms - in short, your stuff. \n\n
		This software is provided \'as-is\', without any express or implied
		warranty. In no event will the author(s) be held liable for any
		damages arising from the use of this software.\n\n
		[Project Homepage](http://danja.github.io/thiki/)\n\n
        Contact : danny.ayers@gmail.com\n\n </string>
    <string name="add_page">Add</string>
    <string name="app_name">Thiki Wiki</string>
    <string name="back">Back</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="default_page_text">Home\n======\n\nThis is the homepage for your
		personal wiki. You can edit this page by
		touching the Edit button in
		the toolbar.\n\n
		Create a link to a new or existing page by surrounding
		a word with curly
		brackets like {Todo}, or by using a WikiWord (a word
		with mixed casing).\n\n

		To synchronize the wiki pages between this device and a desktop
		computer, enter your Dropbox credentials via
		\'Sync Settings\' in the menu.\n\n

		This wiki uses [Markdown formatting](http://en.wikipedia.org/wiki/Markdown#Syntax_examples)
		for text editing.\n\n

	    Thiki Wiki is a notebook with linkable pages for
		tracking your ideas, tasks, projects, notes, brainstorms - in short,
		your life - in the most flexible way.
		If you have any further
		questions, don\'t hesitate to contact the
		developer at
		danny.ayers@gmail.com.</string>
    <string name="delete">Delete</string>

    <!-- Sync Settings Common -->
    <string name="sync">Sync</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_common">Common</string>
    <string name="sync_when_starting_app">On application startup</string>
    <string name="sync_after_edit">After editing a page</string>
    <string name="sync_periodically">Periodically</string>
    <string name="sync_periodically_minutes">Interval (minutes)</string>

    <!-- File Sync Settings -->
    <string name="file_label">Connection with File Storage</string>
    <string name="enable_file_sync">Enable File Sync.</string>
    <string name="enter_file_path">Enter Path</string>
    <string name="default_file_path">/sdcard/thiki</string>

    <!-- HTTP Sync Settings -->
    <string name="http_label">Connection over HTTP</string>
    <string name="enable_http_sync">Enable HTTP Sync</string>
    <string name="enter_http_url">Enter HTTP Base URL</string>
    <string name="default_http_url">http://192.168.0.77:8888/wiki</string>
    <string name="enter_http_user">Enter HTTP Username</string>
    <string name="default_http_user">danja</string>
    <string name="enter_http_password">Enter HTTP Password</string>
    <string name="default_http_password">sasha</string>

    <!-- SPARQL Sync Settings -->
    <string name="sparql_label">Connection to SPARQL Endpoints</string>
    <string name="enable_sparql_sync">Enable SPARQL Sync.</string>
    <string name="enter_sparql_query_url">Enter SPARQL Query URL</string>
    <string name="default_sparql_query_url">http://192.168.0.77:3030/foowiki/sparql</string>
    <string name="enter_sparql_update_url">Enter SPARQL Update URL</string>
    <string name="default_sparql_update_url">http://192.168.0.77:3030/foowiki/update</string>

    <string name="enter_sparql_user">Enter SPARQL Username</string>
    <string name="default_sparql_user">danja</string>
    <string name="enter_sparql_password">Enter SPARQL Password</string>
    <string name="default_sparql_password">sasha</string>


    <!-- Dropbox Sync Settings -->
    <string name="do_dropbox_login">Log in</string>
    <string name="do_dropbox_logout">Forget credentials</string>
    <string name="dropbox_label">Connection with Dropbox</string>
    <string name="enable_dropbox_sync">Enable Dropbox Sync</string>
    <string name="dropbox_login">User</string>
    <string name="dropbox_password">Password</string>
    <string name="edit">Edit</string>
    <string name="edit_css">Edit CSS</string>
    <string name="enter_valid_email">Please enter a seemingly valid email address for
		username.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="help">Help</string>
    <string name="help_text"></string>
    <string name="home">Home</string>
    <string name="list_pages">Pages</string>
    <string name="list_pages_long">List of pages</string>
    <string name="login_success">Logged in to Dropbox successfully.</string>
    <string name="more">More</string>
    <string name="newpage_name_entername">Enter new page name:</string>
    <string name="no_pages">No pages in this list.</string>
    <string name="open">Open</string>
    <string name="page_error">An error occurred loading the page.</string>
    <string name="page_exists">A page with this name already exists.</string>
    <string name="provide_credentials">Please provide your Dropbox credentials first.</string>
    <string name="quit">Quit</string>
    <string name="save">Save</string>
    <string name="save_error">An error occurred while saving the page.</string>
    <string name="storage_not_accessible">The SD card is not accessible.</string>
    <string name="storage_dir_creation_failed">Could not create directory ThoughtCatcher on the SD
		card.</string>
    <string name="synchronizing">Syncing</string>
    <string name="syncError">There was a synchronization error.</string>
    <string name="unknownMimetype">Could not find the app to view this file.</string>
    <string name="v2_update_title">Thiki update</string>
    <string name="v2_update_text">Thiki uses the new Dropbox API.\n\All files must be downloaded from Dropbox; local changes will be lost. A backup of all files has been made to the SD card in the directory ThoughtCatcher-backup.</string>

</resources>